# OsuNewBeatmapPackNotification2Discord

./: .gitignore  LICENSE  README.md  db_handler.py  initialization.sh  main.py  pyproject.toml  requirements.txt
