[project]
name = "osunewbeatmappacknotification2discord"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rakkyo150", email = "86054813+rakkyo150@users.noreply.github.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "selenium>=4.20.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/osunewbeatmappacknotification2discord"]
